- VAR internals: scrap augmented Cholesky matrix; so the
  $system.C accessor is now a square matrix
- $system bundle: ensure presence of xlist member, and
  include the command-word (var, vecm or system)
- mread(): support reading gdt and gdtb files as matrices
- readfile(): support reading gzipped files transparently
- obslabel(): support a vector of observations
- "open" command: support reading selected series from
  native gretl datafiles (gdt, gdtb)
- "join" command: support $obsmajor, $obsminor as outer keys
- "coint2" command: rename as "johansen"
- "freq" and "xtab" for string-valued series: don't let
  non-ASCII characters break the formatting
- Gretl User's Guide: add links to download example scripts
- Reorganize the categories for the functions help file
- Fix obscure problem with plots: inability to show markers
  for observations in some cases where this should be OK
- Fix bug: potential crash on "Save as icon and close" for
  a model displayed in tabbed model viewer
- Fix bug: possible crash on confusion between singleton
  array and array element within a loop
- Fix bug: crash after setting "specific lags" for a VAR in
  the GUI model selection dialog
- Fix bug: possible crash on frequency plot for series with
  long string values
- Fix: text encoding for RTF printing of model output broken
  in some cases under translation
- Fix: memory leaks associated with GUI window lists
- Fix: buggy completion proposals in script editor when
  using gtksourceview-2.0
- Fix Windows-specific bug: gretlcli and gretlmpi could
  fail on parsing command-line arguments

2020-11-21 version 2020e
- New function tdisagg() for temporal disaggregation
  (distribution and interpolation)
- New addon package "regls": supports LASSO, Ridge regression
  and Elastic net
- New function assert() for debugging purposes
- MPI: update documentation and support transfer of more
  data types
- kdensity() function: generalize to allow as argument a